<resources>
    <string name="app_name">Easy Shopping Pal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item_hint">enter a shopping item</string>
    <string name="shopping_list_item_checkbox_label">""</string>
    <string-array name="Quantaty_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="title_activity_share">ShareActivity</string>
    <string name="action_send_sms">Send via SMS</string>
    <string name="action_about">About</string>
    <string name="action_donate">Donate</string>
    <string name="action_send_email">Send via Email</string>
    <string name="action_clear_all">Clear All</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_contact_me">If you notice a bug or you have a suggestion about the app, please contact me via the email above.</string>
    <string name="about_my_email">koemdjiev@gmail.com</string>
    <string name="action_remove_ads">Remove Ads</string>
    <string name="banner_ad_unit_id">ca-app-pub-1798838525129690/9197011761</string>
    <string name="title_activity_how_to">HowToActivity</string>
    <string name="action_how_to_use">How to use</string>
    <string name="how_to_use">
        • To activate voice input simply turn the switch at the top of the screen to \"ON\"\n\n
        • To rearrange list items, simply long press on the item that you want to change the position to,drag it and release it to the desired position.\n\n
        • To create a reminder, go into a list that you want to create a reminder for and choose "Remind me" \n\n
        • Add shopping items or lists of items by pressing the plus button \n\n
        • Add shopping item quantity by pressing \"Add Quantity\" button when adding a shopping item \n\n
        • Edit shopping items/lists by long pressing on the desirable item \n\n
        • Remove an item from the list either by checking the checkbox on the right side of the list of items or swiping the item off in either direction: LEFT or RIGHT \n\n
        • Remove an entire list of shopping items by swiping off in either directionL LEFT or Right \n\n
        • To remove All shopping items from the list go to the drop down menu and select \"Clear All\" from the drop down menu \n\n
        • To send all of the shopping items via Email go to the drop down menu and select \"Send via Email\" \n\n
        • To send all of the shopping items via go to the drop down menu and select \" Send via SMS\" \n\n
        • Sort the list alphabetically by pressing the \"Sort Alphabetically\" option in the drop down menu \n\n
    </string>
    <string name="sort_Alphabetically">Sort Alphabetically</string>
    <string name="app_version">Version: 1.8</string>
    <string name="shopping_list_item_empty_text">No Shopping Items yet</string>
    <string name="error_voice_recognition">Error has occurred. Please make sure that you have a working internet connection before using voice input. Alternatively, you can switch to standard input</string>
    <string name="action_switch">Voice Input</string>
    <string name="enabled">ON</string>
    <string name="disabled">OFF</string>
    <string name="title_activity_item_lists">ItemListsActivity</string>
    <string name="shopping_list_empty_text">No Shopping lists yet</string>
    <string name="action_reminder">Remind me</string>
    <string name="dialog_message_rearrange_title">Rearranging list items</string>
    <string name="dialog_message_rearrange_message">To rearrange list items, simply long press on the item that you want to change the position to,drag it and release it to the desired position.</string>
    <string name="dialog_message_clear_all_title">Clear All</string>
    <string name="dialog_message_clear_all_message">Are you sure that you want to remove all shopping items from the list?</string>
</resources>
