<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_clearAll"
          android:title="@string/action_clear_all"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_sortAlphabetically"
          android:title="@string/sort_Alphabetically"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_send_sms"
          android:title="@string/action_send_sms"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <item android:id="@+id/action_send_email"
          android:title="@string/action_send_email"
          android:orderInCategory="400"
          app:showAsAction="never"/>
    <item android:id="@+id/action_remove_adds"
          android:title="@string/action_remove_ads"
          android:orderInCategory="500"
          app:showAsAction="never"/>
    <item android:id="@+id/action_how_to_use"
          android:title="@string/action_how_to_use"
          android:orderInCategory="600"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="700"
          app:showAsAction="never"/>
    <item
        android:id="@+id/action_switch"
        android:title="@string/action_switch"
        app:actionLayout="@layout/switch_layout"
        app:showAsAction="ifRoom" />

</menu>
